Fixed overflow problem for company events.

--- a/receptionist_client/web/css/companyevents.css
+++ b/receptionist_client/web/css/companyevents.css
@@ -8,6 +8,7 @@
   width: 100%;
   font-size: 0.8em;
   list-style-type: none;
+  overflow: auto;
 }
 
 .company-events-active {
